--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4730,6 +4730,19 @@
   url       = {http://ceur-ws.org/Vol-2593/paper6.pdf},
 }
 
+@Article{Berhe2022,
+  author    = {Berhe, A. and Guinaudeau, C. and Barras, C.},
+  title     = {Survey on Narrative Structure: from Linguistic Theories to Automatic Extraction Approaches},
+  journal   = {Varia},
+  year      = {2022},
+  volume    = {63},
+  number    = {1},
+  pages     = {63-87},
+  owner     = {Vincent},
+  timestamp = {2023.09.14},
+  url       = {https://www.atala.org/index.php/content/tal_63_1_3},
+}
+
 @Article{Berkman2000,
   author    = {Berkman, L. F. and Glass, T. and Brissette, I. and Seeman, T. E.},
   title     = {From social integration to health: Durkheim in the new millennium},
@@ -5678,6 +5691,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.plutobooks.com/9780745339290/theatre-of-the-oppressed/},
+}
+
+@Article{Bobinac2023,
+  author    = {Bobinac, M.},
+  title     = {From England to Austria and Croatia: Transfer of Technology and Strokes of Fate - Heimito Von Doderer's Novel The Waterfalls Of Slunj},
+  journal   = {Central European Cultures},
+  year      = {2023},
+  volume    = {3},
+  number    = {1},
+  pages     = {116-127},
+  doi       = {10.47075/cec.2023-1.06},
+  owner     = {Vincent},
+  timestamp = {2023.08.29},
 }
 
 @Article{Boccaletti2006,
@@ -6750,6 +6776,18 @@
   doi       = {10.1109/tpami.2004.60},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Bozovic2021,
+  author    = {Bozovic, M.},
+  title     = {Introduction},
+  journal   = {Russian Literature},
+  year      = {2021},
+  volume    = {122-123},
+  pages     = {1-6},
+  doi       = {10.1016/j.ruslit.2021.07.001},
+  owner     = {Vincent},
+  timestamp = {2023.09.22},
 }
 
 @InProceedings{Bracewell2011,
@@ -10022,12 +10060,23 @@
 
 @InProceedings{Chiroux2022,
   author    = {Chiroux, Adrien},
-  title     = {Hesse, Woolf, and the Art of Reconstruction},
+  title     = {Hesse, Woolf, and the Art of (Re)Construction},
   booktitle = {1922/2022 - Total Modernism: Continuity, Discontinuity, And The Experimental Turn},
   year      = {2022},
   owner     = {Vincent},
   timestamp = {2022.05.23},
   url       = {https://dial.uclouvain.be/pr/boreal/object/boreal:260897},
+}
+
+@Article{Chiroux2023,
+  author    = {Chiroux, A.},
+  title     = {Hesse, Woolf, and the ``Art of (Re)Construction'': A Comparative Study of Der Steppenwolf (1927) and The Waves (1931)},
+  journal   = {CoSMo},
+  year      = {2023},
+  volume    = {23},
+  owner     = {Vincent},
+  timestamp = {2023.08.21},
+  url       = {https://dial.uclouvain.be/pr/boreal/fr/object/boreal%3A273760},
 }
 
 @InCollection{Chnes2012,
@@ -12904,6 +12953,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.upress.umn.edu/book-division/books/a-thousand-plateaus},
+}
+
+@Article{Deleuze2023,
+  author    = {Deleuze, L.},
+  title     = {``Nos solitudes à partager'' : Personnages-voix , êtres en relation dans les romans de Laurent Mauvignier},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {108-120},
+  doi       = {10.1353/esp.2023.a906711},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
 }
 
 @Article{Deleyto1991,
@@ -19518,6 +19580,20 @@
   timestamp = {2019.04.13},
 }
 
+@Article{Gibson2023,
+  author    = {Gibson, R. H. and Colón, M.},
+  title     = {Contact-Tracing War and Peace: A Critical Experiment in Social Network Analysis},
+  journal   = {Russian Literature},
+  year      = {2023},
+  volume    = {140},
+  pages     = {163--190},
+  month     = jul,
+  doi       = {10.1016/j.ruslit.2023.06.003},
+  owner     = {Vincent},
+  publisher = {Elsevier {BV}},
+  timestamp = {2023.09.14},
+}
+
 @Book{Gifford1988,
   title     = {``Ulysses'' Annotated: Notes for James Joyce's ``Ulysses''},
   publisher = {University of California Press},
@@ -19725,6 +19801,19 @@
   url          = {https://shiring.github.io/networks/2017/05/15/got_final},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Article{Glasberg2023,
+  author    = {Glasberg, R.},
+  title     = {Déjà lu ?: On Rachid Boudjedra's Recurring Jewish-Muslim Figure},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {80-93},
+  doi       = {10.1353/esp.2023.a906704},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
 }
 
 @InProceedings{Glass2006,
@@ -20900,6 +20989,32 @@
   timestamp = {2022.06.21},
 }
 
+@Article{GrenouilleauLoescher2023,
+  author    = {Grenouilleau-Loescher, R. and Haklin, K. A.},
+  title     = {Introduction: Characters in/as Connection},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {1-9},
+  doi       = {10.1353/esp.2023.a906705},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
+}
+
+@Article{Grenouilleau-Loescher2023,
+  author    = {Grenouilleau-Loescher, R.},
+  title     = {Relational Character Constellations: Maryse Condé's Traversée de la mangrove and Maylis de Kerangal's Réparer les vivants},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {94-107},
+  doi       = {10.1353/esp.2023.a906713},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
+}
+
 @Article{Greteman2015,
   author    = {Greteman, B.},
   title     = {Milton and the Early Modern Social Network: The Case of the Epitaphium Damonis},
@@ -21678,6 +21793,19 @@
   doi       = {10.1287/ijoc.4.4.412},
   owner     = {Vincent},
   timestamp = {2022.07.08},
+}
+
+@Article{Haklin2023,
+  author    = {Haklin, K. A.},
+  title     = {Character Ecologies in Zola's Rougon-Macquart : Beyond Heredity, Beyond Metaphor},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {37-51},
+  doi       = {10.1353/esp.2023.a906712},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
 }
 
 @Article{Halkidi2002,
@@ -22533,6 +22661,17 @@
   owner     = {Vincent},
   timestamp = {2023.08.11},
   url       = {https://www.routledge.com/Person-Memory-PLE-Memory-The-Cognitive-Basis-of-Social-Perception/Hastie-Ostrom-Ebbesen-Wyer-Hamilton-Carlston/p/book/9781138978218},
+}
+
+@Article{Hatzel2023,
+  author    = {Hatzel, H. Ole and Stiemer, H. and Biemann, C. and Gius, E.},
+  title     = {Machine learning in computational literary studies},
+  journal   = {it - Information Technology},
+  year      = {2023},
+  volume    = {in press},
+  doi       = {10.1515/itit-2023-0041},
+  owner     = {Vincent},
+  timestamp = {2023.08.29},
 }
 
 @InProceedings{Hauffa2011,
@@ -26408,6 +26547,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://hdl.handle.net/1880/115664},
 }
 
+@InProceedings{Jorgensen2023,
+  author    = {Jorgensen, K. and Wang, H. and Wang, M.},
+  title     = {From Screenplay to Screen: A Natural Language Processing Approach to Animated Film Making},
+  booktitle = {International Conference on Computing, Networking and Communications},
+  year      = {2023},
+  pages     = {484-490},
+  doi       = {10.1109/icnc57223.2023.10074526},
+  owner     = {Vincent},
+  timestamp = {2023.08.23},
+}
+
 @InProceedings{Joseph2017,
   author    = {Joseph, K. and Wei, W. and Carley, K. M.},
   title     = {Girls Rule, Boys Drool: Extracting Semantic and Affective Stereotypes from Twitter},
@@ -27210,6 +27360,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://www.jstor.org/stable/20107058},
+}
+
+@Book{Kaufman2011,
+  title     = {Understanding Tolstoy},
+  publisher = {Ohio State University Press},
+  year      = {2011},
+  author    = {Kaufman, A.},
+  owner     = {Vincent},
+  timestamp = {2023.09.22},
+  url       = {https://andrewdkaufman.com/books/understanding-tolstoy/},
 }
 
 @Article{Kaur2015,
@@ -31541,6 +31701,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.03.14},
 }
 
+@Article{LeSaux2023,
+  author    = {Le Saux, E.},
+  title     = {Relier l'arrière-plan : Le réseau des figurants dans le roman de type réaliste du {XIXe} siècle},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {10-23},
+  doi       = {10.1353/esp.2023.a906708},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
+}
+
 @TechReport{LeseleucdeKerouara2020,
   author      = {de Léséleuc de Kérouara, G. and Duval, A.},
   title       = {Novel comprehension via dynamic social network of characters},
@@ -35836,6 +36009,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@Article{Matthews2023,
+  author    = {Matthews, N. L. and Francemone, C. J. and Monge, C. K. and Fitzgerald, K. and Lynch, T. and Grizzard, M.},
+  title     = {The Effects of Side-Taking on Narrative Entertainment and the Perceptions of Events and Characters},
+  journal   = {Media Psychology},
+  year      = {2023},
+  volume    = {in press},
+  doi       = {10.1080/15213269.2023.2255845},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
+}
+
 @InCollection{Maxwell2007,
   author    = {Maxwell, R. and Trumpener, K.},
   title     = {Introduction},
@@ -38108,6 +38292,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Article{Moretti2011,
+  author    = {Moretti, F.},
+  title     = {The Novel: History and Theory},
+  journal   = {New Left Review},
+  year      = {2011},
+  volume    = {52},
+  pages     = {111-124},
+  owner     = {Vincent},
+  timestamp = {2023.09.22},
+  url       = {https://newleftreview.org/issues/ii52/articles/franco-moretti-the-novel-history-and-theory},
+}
+
 @Article{Moretti2011a,
   author    = {Moretti, F.},
   title     = {Network Theory, Plot Analysis},
@@ -40276,6 +40472,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.aclweb.org/anthology/L16-1262},
+}
+
+@Article{Noack2009,
+  author    = {Noack, A.},
+  title     = {Modularity clustering is force-directed layout},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {79},
+  number    = {2},
+  pages     = {026102},
+  doi       = {10.1103/PhysRevE.79.026102},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Book{Noam2009,
@@ -44453,6 +44662,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.03.25},
 }
 
+@Article{RayAlexander2023,
+  author    = {RayAlexander, A.},
+  title     = {Deciphering 1848: Repetition and Degradation in Madame Bovary},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {52-66},
+  doi       = {10.1353/esp.2023.a906707},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
+}
+
 @Electronic{Raymond2020,
   author       = {Raymond, C.},
   month        = {06},
@@ -46223,6 +46445,21 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0008694},
   owner     = {Vincent},
   timestamp = {2010.08.13},
+}
+
+@InCollection{Rosvall2017,
+  author    = {Rosvall, M. and Delvenne, J.-C. and Schaub, M. T. and Lambiotte, R.},
+  title     = {Different approaches to community detection},
+  booktitle = {Advances in Network Clustering and Blockmodeling},
+  publisher = {Wiley},
+  year      = {2020},
+  series    = {Wiley Series in Computational and Quantitative Social Science},
+  chapter   = {4},
+  pages     = {105-120},
+  doi       = {10.1002/9781119483298.ch4},
+  owner     = {Vincent},
+  review    = {arXiv: https://arxiv.org/abs/1712.06468},
+  timestamp = {2017.12.20},
 }
 
 @Article{Roth1999,
@@ -49689,6 +49926,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1410.4876},
 }
 
+@Article{Silver2023,
+  author    = {Silver, S.},
+  title     = {Hogarth's Networks and the Eighteenth-Century ``Graphic'' Novel},
+  journal   = {Novel},
+  year      = {2023},
+  volume    = {56},
+  number    = {2},
+  pages     = {256-279},
+  doi       = {10.1215/00295132-10562853},
+  owner     = {Vincent},
+  timestamp = {2023.09.02},
+}
+
 @Book{Silverman2018,
   title     = {Density estimation for statistics and data analysis},
   publisher = {Routledge},
@@ -49933,6 +50183,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-36683-4_54},
   owner     = {Vincent},
   timestamp = {2021.01.21},
+}
+
+@Article{Small2019,
+  author    = {Small, M. L. and Adler, L.},
+  title     = {The Role of Space in the Formation of Social Ties},
+  journal   = {Annual Review of Sociology},
+  year      = {2019},
+  volume    = {45},
+  pages     = {111-132},
+  doi       = {10.1146/annurev-soc-073018-022707},
+  owner     = {Vincent},
+  timestamp = {2023.09.22},
 }
 
 @Article{Smallwood2015,
@@ -51640,6 +51902,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.09.19},
 }
 
+@Article{Stuecklin2023,
+  author    = {Stücklin, L.},
+  title     = {Écrire comme marchent les mouettes : Écologie et sociologie du geste chez Marcel Proust},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {24-36},
+  doi       = {10.1353/esp.2023.a906709},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
+}
+
 @Article{Su2009,
   author    = {Su, X. and Khoshgoftaar, T. M.},
   title     = {A Survey of Collaborative Filtering Techniques},
@@ -52005,6 +52280,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf00130487},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Sweat2023,
+  author    = {Sweat, A. P.},
+  title     = {Mise(ère)-en-scène : Transposition and the Child in Hugo's and Ly's Les misérables},
+  journal   = {Esprit Créateur},
+  year      = {2023},
+  volume    = {63},
+  number    = {3},
+  pages     = {67-79},
+  doi       = {10.1353/esp.2023.a906710},
+  owner     = {Vincent},
+  timestamp = {2023.09.16},
 }
 
 @Article{Szab2003,
