--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -353,6 +353,28 @@
   timestamp   = {2022.06.29},
 }
 
+@InProceedings{Adukia2022,
+  author    = {Adukia, A. and Christ, C. and Das, A. and Raj, A.},
+  title     = {Portrayals of Race and Gender: Sentiment in 100 Years of Children's Literature},
+  booktitle = {ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies},
+  year      = {2022},
+  pages     = {20-28},
+  doi       = {10.1145/3530190.3534811},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+}
+
+@InProceedings{Adukia2022a,
+  author    = {Adukia, A. and Chiril, P. and Christ, C. and Das, A. and Eble, A. and Harrison, E. and Birali Runesha, H.},
+  title     = {Tales and tropes: Gender roles from word embeddings in a century of children's books},
+  booktitle = {29th International Conference on Computational Linguistics},
+  year      = {2022},
+  pages     = {3086-3097},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+  url       = {https://aclanthology.org/2022.coling-1.273/},
+}
+
 @Book{Aebischer2004,
   title     = {Shakespeare's Violated Bodies: Stage and Screen Performance},
   publisher = {Cambridge University Press},
@@ -8667,6 +8689,17 @@
   timestamp = {2015.11.20},
 }
 
+@InProceedings{Cardoso2020,
+  author    = {Cardoso, B. and Pereiran, D.},
+  title     = {Evaluating an Aspect Extraction Method for Opinion Mining in the Portuguese Language},
+  booktitle = {Anais do Symposium on Knowledge Discovery, Mining and Learning},
+  year      = {2020},
+  pages     = {137-144},
+  doi       = {10.5753/kdmile.2020.11969},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+}
+
 @InProceedings{Carenini2005,
   author    = {Carenini, G. and Ng, R. T. and Zhou, X.},
   title     = {Scalable discovery of hidden emails from large folders},
@@ -9152,6 +9185,19 @@
   doi       = {10.18653/v1/d18-2029},
   owner     = {Vincent},
   timestamp = {2023.08.11},
+}
+
+@Article{Cermakova2020,
+  author    = {Čermáková, A. and Mahlberg, M.},
+  title     = {Gender inequality and female body language in children's literature},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2020},
+  volume    = {36},
+  number    = {Supplement\_2},
+  pages     = {ii72-ii77},
+  doi       = {10.1093/llc/fqaa051},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
 }
 
 @Article{Chaddha2011,
@@ -9961,6 +10007,19 @@
   owner     = {Vincent},
   timestamp = {2013.05.06},
   url       = {http://dl.acm.org/citation.cfm?id=2457688},
+}
+
+@Article{Cheng2020,
+  author    = {Cheng, J.},
+  title     = {Fleshing Out Models of Gender in English-Language Novels (1850-2000)},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2020},
+  volume    = {5},
+  number    = {1},
+  pages     = {11652},
+  doi       = {10.22148/001c.11652},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
 }
 
 @Article{Cherifi2019,
@@ -11757,6 +11816,17 @@
   timestamp = {2020.01.05},
 }
 
+@InProceedings{Cristiani2020,
+  author    = {Cristiani, A. and Lieira, D. and Camargo, H.},
+  title     = {A Sentiment Analysis of Brazilian Elections Tweets},
+  booktitle = {Anais do Symposium on Knowledge Discovery, Mining and Learning},
+  year      = {2020},
+  pages     = {153-160},
+  doi       = {10.5753/kdmile.2020.11971},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+}
+
 @InProceedings{Cristinacce2006,
   author    = {Cristinacce, D. and Cootes, T. F.},
   title     = {Feature Detection and Tracking with Constrained Local Models},
@@ -12250,6 +12320,17 @@
   doi       = {10.21428/93b7ef64.a8ccd1c0},
   owner     = {Vincent},
   timestamp = {2023.07.19},
+}
+
+@InProceedings{DalPizzol2022,
+  author    = {Dal Pizzol, N. and dos Santos Barbosa, E. and Raupp Musse, S.},
+  title     = {Gender Representation in Brazilian Computer Science Conferences},
+  booktitle = {Anais do {XVI} Women in Information Technology},
+  year      = {2022},
+  pages     = {67-76},
+  doi       = {10.5753/wit.2022.222939},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
 }
 
 @Book{Dames2007,
@@ -16531,6 +16612,17 @@
   url       = {https://www.forgottenbooks.com/en/books/TheEvolutionofTechnicinElizabethanTragedy_10040274},
 }
 
+@InProceedings{FariasCordeiro2020,
+  author    = {Farias Cordeiro, D. and Souza Rocha, A. and Kelvis Cassiano, K. and Da Silva, N. R.},
+  title     = {Representativeness of women in postgraduate programs in computer science in {Brazil}},
+  booktitle = {Anais do Women in Information Technology},
+  year      = {2020},
+  pages     = {110-119},
+  doi       = {10.5753/wit.2020.11281},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+}
+
 @Article{Farina1991,
   author    = {Farina, A. and Wheeler, D. S. and Mehta, S.},
   title     = {The Impact of an Unpleasant and Demeaning Social Interaction},
@@ -19586,11 +19678,9 @@
   journal   = {Russian Literature},
   year      = {2023},
   volume    = {140},
-  pages     = {163--190},
-  month     = jul,
+  pages     = {163-190},
   doi       = {10.1016/j.ruslit.2023.06.003},
   owner     = {Vincent},
-  publisher = {Elsevier {BV}},
   timestamp = {2023.09.14},
 }
 
@@ -26214,6 +26304,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.23},
 }
 
+@Article{Jockers2016,
+  author    = {Jockers, M. and Kiriloff, G.},
+  title     = {Understanding Gender and Character Agency in the 19th Century Novel},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2016},
+  volume    = {2},
+  number    = {2},
+  pages     = {12},
+  doi       = {10.22148/16.010},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+}
+
 @InProceedings{John2016,
   author    = {John, M. and Lohmann, S. and Koch, S. and Wörner, M. and Ertl, T.},
   title     = {Visual Analytics for Narrative Text - Visualizing Characters and their Relationships as Extracted from Novels},
@@ -27735,6 +27838,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/976909.979622},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Khadilkar2022,
+  author    = {Khadilkar, K. and KhudaBukhsh, A. R. and Mitchell, T. M.},
+  title     = {Gender bias, social bias, and representation in {Bollywood} and {Hollywood}},
+  journal   = {Patterns},
+  year      = {2022},
+  volume    = {3},
+  number    = {2},
+  pages     = {100409},
+  doi       = {10.1016/j.patter.2021.100409},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
 }
 
 @Article{Khaldi2021,
@@ -49878,6 +49994,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.08.11},
 }
 
+@InProceedings{Silva2021a,
+  author    = {Silva, M. O. and Scofield, C. and Moro, M. M.},
+  title     = {{PPORTAL}: Public Domain Portuguese-language Literature Dataset},
+  booktitle = {Anais do {III} Dataset Showcase Workshop},
+  year      = {2021},
+  pages     = {77-88},
+  doi       = {10.5753/dsw.2021.17416},
+  owner     = {Vincent},
+  timestamp = {2023.09.26},
+}
+
 @Article{Silva2022,
   author    = {Silva, M. O. and Scofield, C. and De Melo-Gomes, L. and Moro, M. M.},
   title     = {Cross-collection Dataset of Public Domain Portuguese-language Works},
@@ -49900,6 +50027,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.5753/brasnam.2023.230585},
   owner     = {Vincent},
   timestamp = {2023.06.17},
+}
+
+@Article{Silva2023a,
+  author    = {Silva, M. O. and de Melo-Gomez, L. and Moro, M. M.},
+  title     = {Gender Representation in Literature: Analysis of Characters' Physical Descriptions},
+  journal   = {Symposium on Knowledge Discovery, Mining and Learning},
+  year      = {2023},
+  pages     = {17-24},
+  doi       = {10.5753/kdmile.2023.232571},
+  owner     = {Vincent},
+  timestamp = {2023.09.23},
 }
 
 @Article{SilvaDias2013,
