--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1162,6 +1162,19 @@
   timestamp = {2021.09.04},
 }
 
+@Article{Alexandre2016,
+  author    = {Alexandre, D. and Douguet, M. and Glorieux, F.},
+  title     = {Graphologies de Claudel autour de la jeune fille violaine et de l'annonce faite à Marie},
+  journal   = {Revue d'histoire littéraire de la France},
+  year      = {2016},
+  volume    = {116},
+  number    = {3},
+  pages     = {547},
+  doi       = {10.3917/rhlf.163.0547},
+  owner     = {Vincent},
+  timestamp = {2023.09.27},
+}
+
 @Article{Alexopoulos2010,
   author    = {Alexopoulos, E.},
   title     = {Introduction to Multivariate Regression Analysis},
@@ -13770,6 +13783,18 @@
   url       = {https://aclanthology.org/2022.konvens-1.2/},
 }
 
+@Article{Doenicke2022a,
+  author    = {Dönicke, T. and Varachkina, H. and Weimer, A. M. and Gödeke, L. and Barth, F. and Gittel, B. and Holler, A. and Sporleder, C.},
+  title     = {Modelling Speaker Attribution in Narrative Texts With Biased and Bias-Adjustable Neural Networks},
+  journal   = {Frontiers in Artificial Intelligence},
+  year      = {2022},
+  volume    = {4},
+  pages     = {725321},
+  doi       = {10.3389/frai.2021.725321},
+  owner     = {Vincent},
+  timestamp = {2023.09.27},
+}
+
 @InCollection{Does2017,
   author    = {de Does, J. and Depuydt, K. and van Dalen-Oskam, K. and Marx, M.},
   title     = {Namescape: Named entity recognition from a literary perspective},
@@ -20040,6 +20065,30 @@
   doi       = {10.1108/9781787141124},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Electronic{Glorieux2016,
+  author       = {Glorieux, F.},
+  month        = {05},
+  year         = {2016},
+  title        = {Dramagraphie (sur le Pamphlet 6 de Franco Moretti)},
+  howpublished = {\url{https://resultats.hypotheses.org/644}},
+  organization = {Hypothèses},
+  url          = {https://resultats.hypotheses.org/644},
+  owner        = {Vincent},
+  timestamp    = {2023.09.27},
+}
+
+@Electronic{Glorieux2016a,
+  author       = {Glorieux, F.},
+  month        = {05},
+  year         = {2016},
+  title        = {Dramagraphie 0.2},
+  howpublished = {\url{https://resultats.hypotheses.org/749}},
+  organization = {Hypothèses},
+  url          = {https://resultats.hypotheses.org/749},
+  owner        = {Vincent},
+  timestamp    = {2023.09.27},
 }
 
 @Article{Godden1975,
@@ -36954,6 +37003,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1749-6632.1990.tb48889.x},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@InCollection{Menand-Doumazane,
+  author    = {Ménand-Doumazane, F. and Doumazane, F.},
+  title     = {La lecture tabulaire de la présence de personnages. Un outil didactique pour l’étude du texte théâtral : l’exemple de Britannicus de Racine},
+  booktitle = {Aspects du classicisme et de la spiritualité. Mélanges en l’honneur de Jacques Hennequin},
+  publisher = {Klincksieck},
+  year      = {1996},
+  owner     = {Vincent},
+  timestamp = {2023.09.27},
+  url       = {https://www.lebateaulivre.fr/livre/1533225-aspects-du-classicisme-et-de-la-spiritualite-m--alain-culliere-centre-de-recherche-michel-baud--klincksieck},
 }
 
 @InCollection{Mencarini2014,
